--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
+    "vue-country-flag": "^1.3.1",
+    "vue-d3-cloud": "^0.2.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
