--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-chartjs": "^3.5.0",
     "vue-country-flag": "^1.3.1",
     "vue-d3-cloud": "^0.2.0",
+    "vue-orgchart": "^1.1.7",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
